k3s/infrastructure/configs/prod/traefik/external-services/truenas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: external-routes
spec:
  ports:
    - port: 443
      name: https
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: external-routes
subsets:
  - addresses:
      - ip: 192.168.0.30
    ports:
      - port: 443
        name: https
