k3s/infrastructure/configs/prod/traefik/external-services/truenas/ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: external-routes
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.maurovi.ch`)
      kind: Rule
      services:
        - name: truenas
          port: 443
          scheme: https
          serversTransport: insecure-skip-verify
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas-https-redirect
  namespace: external-routes
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`truenas.maurovi.ch`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: noop@internal
          kind: TraefikService
